--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,19 +2,21 @@ version: '3'
 
 services:
   rabbitmq:
-    image: rabbitmq:latest
+    image: rabbitmq:3.12.2-management
+    container_name: rabbitmq_management
     ports:
-      - "4369:4369"
-      - "5671:5671"
       - "5672:5672"
-      - "15671:15671"
       - "15672:15672"
     environment:
-      RABBITMQ_ERLANG_COOKIE: "mysecretcookie"
       RABBITMQ_DEFAULT_USER: "user"
       RABBITMQ_DEFAULT_PASS: "1234"
+      RABBITMQ_MANAGEMENT: "true"
     volumes:
       - rabbitmq_data:/var/lib/rabbitmq
+    networks:
+      - konsi_network
+    restart: always
+
 
   redis:
     image: redis:latest
@@ -22,6 +24,8 @@ services:
       - "6379:6379"
     volumes:
       - redis_data:/data
+    networks:
+      - konsi_network
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.15.0
@@ -47,3 +51,4 @@ volumes:
 
 networks:
   konsi_network:
+    driver: bridge
