--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ aiohttp = "^3.8.5"
 pydantic = "^2.1.1"
 python-dotenv = "^1.0.0"
 argparse = "^1.4.0"
+aio-pika = "^9.2.0"
+logging = "^0.4.9.6"
 
 
 [build-system]
